crates/sui-prover/tests/snapshots/spec_paths/wrong_module.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with model building errors
error: unexpected name in this position
   ┌─ tests/inputs/spec_paths/wrong_module.move:12:28
   │
12 │     #[spec(prove, target = bar::inc)]
   │                            ^^^^^^^^ Unexpected module identifier. A module identifier is not a valid expression
